change the title

--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Itetsu's Notes
+title : タルちゃん
 tagline: 
 author :
-  name : Itetsu
+  name : Itetsu, Taru
   email : psweatehr@gmail.com
   github : weichetaru
   twitter : weiche0129 
